Add Y22 batch option back to all forms

--- a/views/adminCreateUser.ejs
+++ b/views/adminCreateUser.ejs
@@ -92,6 +92,7 @@
                                 <label for="batch">Batch *</label>
                                 <select id="batch" name="batch" required>
                                     <option value="">Select batch year</option>
+                                    <option value="Y22">Y22 (2022)</option>
                                     <option value="Y23">Y23 (2023)</option>
                                     <option value="Y24">Y24 (2024)</option>
                                     <option value="Y25">Y25 (2025)</option>
