--- a/views/joinpulse.ejs
+++ b/views/joinpulse.ejs
@@ -207,6 +207,7 @@
           <div class="input_control">
             <select name="batch" id="batch">
               <option value="">Select Batch</option>
+              <option value="Y22">Y22</option>
               <option value="Y23">Y23</option>
               <option value="Y24">Y24</option>
               <option value="Y25">Y25</option>
