--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -474,6 +474,7 @@
             <div class="input_control">
               <select name="batch" id="batch" required>
                 <option value="">Select batch</option>
+                <option value="y22">y22</option>
                 <option value="y23">y23</option>
                 <option value="y24">y24</option>
                 <option value="y25">y25</option>
