--- a/views/forgotpassword.ejs
+++ b/views/forgotpassword.ejs
@@ -54,7 +54,7 @@
             </button>
           </div>
           <div class="input_control input_control_signup">
-            <a class="signin_link" href="/signup"
+            <a class="signin_link" href="/auth"
               >Do you have an account?
               <span style="color: #4dabf7">Sign up</span></a
             >
