--- a/views/about.ejs
+++ b/views/about.ejs
@@ -111,8 +111,7 @@
           <li class="nav-item"><a href="/team">Team</a></li>
           <li class="nav-item"><a href="/contactus">Contact</a></li>
           <% if(typeof session.user === 'undefined' || !session.user) {%>
-          <li class="nav-item"><a href="/signin">Sign in</a></li>
-          <li class="nav-item"><a href="/signup">Sign up</a></li>
+          <li class="nav-item"><a href="/auth">Login</a></li>
           <%}%> <% if(typeof session.user !== 'undefined' && session.user) {%>
           <li class="nav-item"><a href="/profile">Profile</a></li>
           <li class="nav-item"><a href="/logout">Logout</a></li>
