--- a/views/facultySignup.ejs
+++ b/views/facultySignup.ejs
@@ -484,7 +484,7 @@
               </select>
             </div>
             <div class="input_control input_control_signup">
-              <a class="signin_link" href="/signin"
+              <a class="signin_link" href="/auth"
                 >Already have an account?
                 <span style="color: #4dabf7">Login</span></a
               >
